--- a/app/src/main/res/layout/activity_get_data_for_month.xml
+++ b/app/src/main/res/layout/activity_get_data_for_month.xml
@@ -62,7 +62,7 @@
         android:layout_marginTop="50dp"
         android:layout_marginHorizontal="20dp"
         android:orientation="vertical"
-        android:paddingBottom="10dp"
+        android:padding="10dp"
         android:visibility="invisible"
         tools:background="@android:color/darker_gray">
 
@@ -78,7 +78,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="@string/pointsForDay"
+                android:text="@string/pointsForMonth"
                 android:textSize="20sp" />
 
             <TextView
@@ -100,7 +100,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="@string/cargoWeightForDay"
+                android:text="@string/cargoWeightForMonth"
                 android:textSize="20sp" />
 
             <TextView
@@ -122,7 +122,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="@string/AdditionalPointsForDay"
+                android:text="@string/AdditionalPointsForMonth"
                 android:textSize="20sp" />
 
             <TextView
@@ -143,7 +143,28 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="@string/TotalJobCost"
+                android:text="@string/totalGasSpend"
+                android:textSize="20sp" />
+
+            <TextView
+                android:id="@+id/totalGasMonth"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="20sp"
+                tools:text="5000" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/TotalJobCostMonth"
                 android:textSize="20sp" />
 
             <TextView
@@ -154,5 +175,7 @@
                 tools:text="5000" />
 
         </LinearLayout>
+
+
     </LinearLayout>
 </LinearLayout>
