--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,7 +1,9 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Base.Theme.JobTracker" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your dark theme here. -->
-        <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
+        <item name="android:windowBackground">@color/app_background</item>
+        <item name="materialButtonStyle">@style/Buttons_style</item>
+        <item name="editTextStyle">@style/Custom_inputs_selectors</item>
+        <item name="android:textViewStyle">@style/Custom_text</item>
     </style>
 </resources>
