--- a/app/src/main/res/layout/activity_get_data_for_month.xml
+++ b/app/src/main/res/layout/activity_get_data_for_month.xml
@@ -30,6 +30,7 @@
         android:layout_marginTop="10dp"
         android:layout_marginHorizontal="20dp"
         android:inputType="number"
+        android:paddingStart="13dp"
         android:digits="0123456789"
         android:maxLength="4"
         android:hint="@string/edittextYear"/>
