--- a/app/src/main/res/layout/activity_edit_daydata.xml
+++ b/app/src/main/res/layout/activity_edit_daydata.xml
@@ -73,7 +73,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="number"
-        android:digits="0123456789"
+        android:digits="0123456789."
         android:layout_marginTop="5dp"
         android:layout_marginHorizontal="15dp"/>
 
